hard-gists/f1eca6cb0061cde701c2/run.log
=== Docker Run Log for f1eca6cb0061cde701c2 ===
Started at: Mi 29. Okt 21:23:40 CET 2025

[2025-10-29 21:23:40] START: Running container for f1eca6cb0061cde701c2
[2025-10-29 21:23:40] SUCCESS: Container 181eee8f702bc075d598cd188cc8eef9a73bf367fc1a7c1b6ed99a397af51747 started for f1eca6cb0061cde701c2
=== Container logs for f1eca6cb0061cde701c2 ===
  File "/snippet.py", line 28
    print "Data loaded."
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f1eca6cb0061cde701c2 ===
[2025-10-29 21:23:43] INFO: Container 181eee8f702bc075d598cd188cc8eef9a73bf367fc1a7c1b6ed99a397af51747 has stopped
